--- a/ToDO
+++ b/ToDO
@@ -1,2 +1,3 @@
 add sessions so user wont be able to back and return while keeping their accounts logged in
 the products page
+github workflow. do yamel automated ci integration
